fix: spacing tokens

--- a/src/components/data-table-v2/_data-table-v2-core.scss
+++ b/src/components/data-table-v2/_data-table-v2-core.scss
@@ -179,7 +179,7 @@
     min-width: rem(500px);
     width: 100%;
     overflow-x: auto;
-    padding-top: $spacing-3xs; // allow space for focus styles
+    padding-top: $spacing-01; // allow space for focus styles
   }
 
   //-------------------------------------------------
@@ -188,7 +188,7 @@
   .#{$prefix}--data-table-v2-header {
     background: $ui-01;
     height: rem(88px);
-    padding: rem(22px) 0 0 $spacing-md;
+    padding: rem(22px) 0 0 $spacing-05;
   }
 
   .#{$prefix}--data-table-v2-title {
@@ -222,7 +222,7 @@
 
     tr {
       border: none;
-      height: rem(48px);
+      height: $layout-04;
       width: 100%;
     }
 
@@ -239,8 +239,8 @@
 
     th,
     td {
-      padding-left: $spacing-sm;
-      padding-right: $spacing-sm;
+      padding-left: $spacing-04;
+      padding-right: $spacing-04;
       vertical-align: top;
       text-align: left;
     }
@@ -253,7 +253,7 @@
     }
 
     th:first-of-type:not(.#{$prefix}--table-column-checkbox) {
-      padding-left: $spacing-lg;
+      padding-left: $spacing-06;
     }
 
     th.#{$prefix}--table-column-icon:hover,
@@ -272,28 +272,28 @@
       color: $text-02;
       border-top: 1px solid $ui-01;
       border-bottom: 1px solid $ui-03;
-      padding: rem(14px) $spacing-sm;
+      padding: rem(14px) $spacing-04;
     }
 
     td:first-of-type {
-      padding-left: $spacing-lg;
+      padding-left: $spacing-06;
     }
 
     td:last-of-type {
-      padding-right: $spacing-lg;
+      padding-right: $spacing-06;
     }
 
     // specific padding for checkbox columns
     .#{$prefix}--table-column-checkbox,
     .#{$prefix}--table-column-checkbox:first-of-type {
-      padding: rem(10px) $spacing-md 0 $spacing-md;
+      padding: rem(10px) $spacing-05 0 $spacing-05;
     }
 
     // specific padding for overflow menu columns
     .#{$prefix}--table-column-menu,
     .#{$prefix}--table-column-menu:last-of-type {
-      padding-top: rem(8px);
-      padding-right: rem(8px);
+      padding-top: $spacing-03;
+      padding-right: $spacing-03;
     }
 
     td.#{$prefix}--table-column-menu .#{$prefix}--overflow-menu[aria-expanded='false']:hover {
